Assignment 2 saving in database api for get simulation details 2.1 api for get relative distribution 2.2

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url=jdbc:h2:mem:dicedb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=dice
+spring.datasource.password=dice
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+hibernate.hbm2ddl.auto=create
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
+
+logging.level.root=WARN
+logging.level.com.assignment=DEBUG
