--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.h2.console.path=/h2-console
 
 logging.level.root=WARN
 logging.level.com.assignment=DEBUG
+
+
+springdoc.swagger-ui.path=/swagger-ui-dice.html
